Add remote experience

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -58,6 +58,16 @@ title: About
       </div> -->
       <div class="sm:col-span-2">
         <dt class="text-sm leading-5 font-medium text-gray-500">
+          Remote Experience
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <p>I've spent 5 years working remotely for an agency based in a different time zone.</p>
+          <p>I also spent 6 months travelling to other countries while continuing to work remote.</p>
+          <p>I spent a month working from the USA with a team that was based out of Australia.</p>
+        </dd>
+      </div>
+      <div class="sm:col-span-2">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
           Ideal Team
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
