--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -11,7 +11,7 @@ title: Categories
           {{ category[0] }}
         </h3>
         <div class="flex-shrink-0">
-          <span class="inline-flex items-center px-2 py-1 rounded-md text-sm font-medium leading-5 bg-green-200 text-green-800">
+          <span class="inline-flex items-center px-2 py-1 rounded-md text-sm font-medium leading-5 bg-emerald-200 text-emerald-800">
             {{ category[1].size }}
           </span>
         </div>
@@ -30,7 +30,7 @@ title: Categories
                     {{ node.title }}
                   </div>
                   <div class="ml-2 flex-shrink-0 flex">
-                    <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+                    <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-emerald-100 text-emerald-800">
                       {{ category[0] }}
                     </span>
                   </div>
