Update and cleanup

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,8 +5,17 @@ permalink: /
 ---
 
 {% comment %}
+{% assign service_list = site.data.services %}
+{% include service-list.html %}
+{% assign recent_posts = site.posts %}
 {% include recent-post-items.html %}
 {% endcomment %}
+
+{% comment %}
+{% assign featured_items = site.data.projects | where: "featured", true %}
+{% endcomment %}
+
+{% assign featured_items = site.data.featured %}
 {% include featured-items.html %}
 
 {% assign testimonial = site.data.testimonials | first %}
