Use liquid open close tags for whitespace control

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -2,5 +2,5 @@
 title: Projects
 ---
 
-{% assign project_list = site.data.projects %}
-{% include project-list.html %}
+{%- assign project_list = site.data.projects -%}
+{%- include project-list.html -%}
