Update projects and cv

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -2,5 +2,15 @@
 title: Projects
 ---
 
+{%- assign featured_items = site.data.featured -%}
+<ul class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
+  {%- for featured in featured_items limit: 3 -%}
+  {%- include featured-item.html -%}
+  {%- endfor -%}
+  {%- assign featured_items = nil -%}
+</ul>
+
+{%- comment -%}
 {%- assign project_list = site.data.projects -%}
 {%- include project-list.html -%}
+{%- endcomment -%}
