Add Google IO project

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -4,7 +4,7 @@ title: Projects
 
 {%- assign featured_items = site.data.featured -%}
 <ul class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
-  {%- for featured in featured_items limit: 3 -%}
+  {%- for featured in featured_items -%}
   {%- include featured-item.html -%}
   {%- endfor -%}
   {%- assign featured_items = nil -%}
